src/styles/base.css
* {
  box-sizing: border-box;
}

body {
  font-family: 'Roboto', sans-serif;
}

html,
body,
#app {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

.app-container {
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.icon {
  display: inline-block
}

.scroll-wrapper {
  height: 100%;
  overflow: hidden;
}

.main-layout {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 100%;
  padding-top: 120px;
  padding-bottom: 80px;
}

.main-layout__play-btn {
  position: absolute;
  left: 0;
  bottom: 0;
  padding: 20px 30px;
}

.main-layout__profile {
  padding: 20px 30px;
  display: flex;
  justify-content: flex-end;
}

.app-cmd {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 100px;
  margin-top: 70px;
}

.page-section {
  margin-top: 50px;
}

.group-page {
  width: 100%;
}

.main-page {
  height: 100%;
}

.main-page .scroll-container {
  padding-bottom: 80px;
}

.library-page {
  width: 100%;
  height: 100%;
}

.library-page .TracklistTable {
  width: 800px;
  height: 100%;
}

.group-page__content {
  padding-top: 50px;
  padding-bottom: 100px;
}

.scroll-container {
  overflow: auto;
  width: 100%;
  height: 100%;
}

.toolbar-container {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 120px;
  align-items: flex-end;
}

.toolbar {
  text-align: right;
  width: 800px;
  padding: 20px 0;
}

.action {
  font-weight: 300;
  font-family: 'Roboto', sans-serif;
  cursor: pointer;
  padding: 5px 10px;
  font-size: .7rem;
  text-transform: uppercase;
}

@media screen and (max-width: 768px) {
  .group-page__content {
    padding-top: 15px;
  }
}

